# thoth

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  build.sh  pyproject.toml
app/: __main__.py  package-lock.json  package.json  tsconfig.json
app/assets/: style.css
app/src/: entries.ts  entry.ts  index.ts  login.ts  register.ts
app/templates/: base.html  entries.html  entry.html  index.html  login.html  register.html
ctrl/: __main__.py
ctrl/assets/: style.css
ctrl/templates/: index.html  login.html
entries/: models.py  urls.py  views.py
index/: settings.py  urls.py  views.py  wsgi.py
migrations/versions/: 0de4f0c56079_add_active_column.py  887d88852df2_create_user_table.py  ae31dc92562b_create_journal_table.py  e6f2992221f9_add_column_to_journal_table.py
templates/: base.html  entries.html  entry.html  index.html  read.html
templates/registration/: login.html  register.html
user/: forms.py  urls.py  views.py
