[tool.poetry]
name = "thoth"
version = "0.1"
description = "A bullet journal"
authors = ["bramz <brockramz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flake8 = "^3.7"
Flask-CacheBuster = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
